# legendary-fortnight

aoc2019/: Cargo.toml
aoc2019/src/: main.rs  solve_template.rs
aoc2019/src/day1/: solve.rs
aoc2019/src/day2/: solve.rs
aoc2019/src/day3/: solve.rs
aoc2019/src/day4/: solve.rs
aoc2019/src/day5/: input.txt  solve.rs
aoc2019/src/day6/: solve.rs
aoc2019/src/day7/: input.txt  solve.rs
aoc2019/src/day8/: solve.rs
