[package]
name = "aoc2019"
version = "0.1.0"
authors = ["Mattias Lundberg <mattias@kundo.se>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"

[[bin]]
name = "generate"
path = "src/main.rs"

[[bin]]
name = "day1"
path = "src/day1/solve.rs"

[[bin]]
name = "day2"
 path = "src/day2/solve.rs"

[[bin]]
name = "day3"
 path = "src/day3/solve.rs"
